--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 # aws-greengrass-system-log-forwarder - AWS Greengrass component for forwarding
-# logs to CloudWatch Copyright Amazon.com, Inc. or its affiliates. All Rights
-# Reserved. SPDX-License-Identifier: Apache-2.0
+# logs to CloudWatch.
+#
+# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
+#
+# SPDX-License-Identifier: Apache-2.0
 
 cmake_minimum_required(VERSION 3.22)
 project(aws-greengrass-system-log-forwarder C)
