--- a/recipe.yaml
+++ b/recipe.yaml
@@ -1,4 +1,6 @@
-# aws-greengrass-system-log-forwarder - AWS Greengrass component for forwarding logs to CloudWatch
+# aws-greengrass-system-log-forwarder - AWS Greengrass component for forwarding
+# logs to CloudWatch.
+#
 # Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 # SPDX-License-Identifier: Apache-2.0
 ---
