--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           - name: build with GCC
             check: packages-default
           - name: static build
-            check: packages-ggl-sdk-static
+            check: packages-ggl-cloud-logger-static
           - name: build with Clang
             check: build-clang
           - name: cross-build for arm32 Musl
