--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential cmake pkg-config git libssl-dev
+          sudo apt-get install -y build-essential cmake pkg-config git libssl-dev libsystemd-dev
 
       - name: Set version
         id: version
