Add logStream back to recipe

--- a/recipe.yaml
+++ b/recipe.yaml
@@ -17,6 +17,7 @@ ComponentConfiguration:
     maxUploadIntervalSec: 300
     bufferCapacity: 1048576
     logGroup: "greengrass/systemLogs"
+    logStream: ""
     filters:
       services: ["ggl.*"]
 Manifests:
@@ -29,5 +30,5 @@ Manifests:
         Script: |
           {artifacts:path}/system-log-forwarder --maxUploadIntervalSec {configuration:/maxUploadIntervalSec} \
             --bufferCapacity {configuration:/bufferCapacity} --logGroup {configuration:/logGroup} \
-            --thingName {iot:thingName} \
+            --logStream "{configuration:/logStream}" --thingName {iot:thingName} \
             --filters {configuration:/filters}
